# Agentic_AI_Coding

./: main.py  pyproject.toml  requirements.txt
Langchain/: 1intro.ipynb  2model_integration.ipynb  3messages.ipynb  4-structured_output.ipynb  intro.ipynb  model_integration.ipynb
